manifests/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        app.kubernetes.io/component: backstage
        backstage.io/kubernetes-id: default
    spec:
      containers:
        - name: test
          image: quay.io/fmeneses/test:latest
          ports:
            - name: http-3000
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
