manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test
  labels:
    app: test
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: default
spec:
  ports:
    - name: http-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: test
