manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: default
  labels:
    app: test
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: default
spec:
  - host: localhost/test
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test
              port:
                number: 3000
